Removed context-dependency from ClientBundle and made unknown fields optional.
* added custom deserializer for TypeInformation